feat: 🚧 add data projetcs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         alt="avatar"
       />
       <a
-        href="/"
+        href="https://www.linkedin.com/in/kevin-jimenez-a7321b193"
         target="_blank"
         rel="noopener"
         class="flex justify-center items-center"
@@ -83,14 +83,16 @@
     </section-title>
     <div class="w-full flex flex-row gap-x-4 items-center justify-center">
       <p class="text-pretty text-brand-primary">
-        Soy un apasionado de la tecnología y disfruto aprendiendo e investigando
-        sobre nuevas tendencias y avances. Mi especialidad abarca el desarrollo
+        Hola, mi nombre es Kevin Jiménez. Soy graduado en Ingeniería en Sistemas
+        Informáticos y de Computación por la Escuela Politécnica Nacional. Soy
+        un apasionado de la tecnología y me encanta aprender e investigar sobre
+        nuevas tendencias y avances. Mi especialidad abarca el desarrollo
         frontend, backend y móvil, áreas en las que me esfuerzo por crear
         soluciones innovadoras y funcionales. Recientemente, he comenzado a
         profundizar en el aprendizaje automático (machine learning) y la visión
-        por computadora, campos que me fascinan y en los que estoy expandiendo
-        mis conocimientos. Además de mi interés por la tecnología, disfruto
-        mucho de los videojuegos y soy un entusiasta del fútbol.
+        por computadora, campos que me fascinan y en los que estoy ampliando mis
+        conocimientos. Además de mi interés por la tecnología, disfruto mucho de
+        los videojuegos y soy un entusiasta del fútbol.
       </p>
       <img
         class="h-56 rounded-lg shadow-md transition-transform duration-300 ease-in-out md:hover:scale-105 hover:shadow-lg"
