--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,9 @@
 <section class="header-contanier">
   <article class="header-nav">
-    <a href="#top">Inicio</a>
-    <a href="#about-me">Sobre mi</a>
-    <a href="#experience">Expereiencia</a>
-    <a href="#projects">Projectos</a>
-    <a href="#contact">Contact</a>
+    <a routerLink="/" fragment="top">Inicio</a>
+    <a routerLink="/" fragment="about-me">Sobre mi</a>
+    <a routerLink="/" fragment="experience">Expereiencia</a>
+    <a routerLink="/" fragment="projects">Projectos</a>
+    <a routerLink="/" fragment="contact">Contacto</a>
   </article>
 </section>
