--- a/src/app/components/experience-item/experience-item.component.html
+++ b/src/app/components/experience-item/experience-item.component.html
@@ -5,7 +5,7 @@
 <div class="flex flex-row w-full gap-x-2 items-center justify-center">
   <img class="size-10 rounded-sm" [src]="currentExperience.logo" alt="" />
   <div class="flex flex-col w-full gap-y-1">
-    <span class="mb-1 text-sm font-normal leading-none text-brand-primary">{{
+    <span class="mb-1 text-sm font-semibold leading-none text-brand-primary">{{
       currentExperience.company
     }}</span>
     <time class="mb-1 text-xs font-normal leading-none text-brand-primary/80">{{
@@ -24,21 +24,8 @@
   [href]="currentExperience.link"
   target="_blank"
   rel="noopener"
-  class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700"
-  >Saber mas
-  <svg
-    class="w-3 h-3 ms-2 rtl:rotate-180"
-    aria-hidden="true"
-    xmlns="http://www.w3.org/2000/svg"
-    fill="none"
-    viewBox="0 0 14 10"
-  >
-    <path
-      stroke="currentColor"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-      stroke-width="2"
-      d="M1 5h12m0 0L9 1m4 4L9 9"
-    /></svg
-></a>
+  class="inline-flex items-center justify-center hover:underline text-brand-primary font-semibold"
+  >Conocer más
+  <chevron-compact-right customClass="size-4" />
+</a>
 }
