--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -16,12 +16,25 @@
     </li>
     }
   </ul>
-  <div class="flex gap-4 justify-start my-2">
+  <div class="flex gap-4 flex-col md:flex-row md:justify-start my-2">
     <img
       [src]="project.image"
       alt="Captura de pantalla del proyecto {{ project.image }}"
       class="h-[100%] md:h-[200px] aspect-[16/9] object-cover rounded-lg shadow-md transition-transform duration-300 ease-in-out md:hover:scale-105 hover:shadow-lg"
     />
+    <section>
+      <article class="flex gap-x-2 gap-y-1 flex-wrap">
+        <a
+          href="{{ project.github }}"
+          target="_blank"
+          rel="noopener"
+          class="px-2 py-1 bg-brand-primary/80 hover:bg-brand-primary text-brand-secundary rounded-md flex items-center gap-x-2"
+        >
+          <github customClass="size-6" />
+          <span class="text-xl"> Code </span>
+        </a>
+      </article>
+    </section>
   </div>
 </article>
 
