--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,8 +28,6 @@
         <badge> Fullstack developer </badge>
         <badge> NestJS </badge>
         <badge> Angular </badge>
-        <badge> Vue </badge>
-        <badge> React </badge>
       </span>
     </h1>
     <h2 class="text-xl lg:text-2xl text-wrap max-w-[700px]">
@@ -81,7 +79,9 @@
       <user customClass="size-7" />
       Sobre mi
     </section-title>
-    <div class="w-full flex flex-row gap-x-4 items-center justify-center">
+    <div
+      class="w-full flex flex-col md:flex-row gap-x-4 items-center justify-center gap-y-3"
+    >
       <p class="text-pretty text-brand-primary">
         Hola, mi nombre es Kevin Jiménez. Soy graduado en Ingeniería en Sistemas
         Informáticos y de Computación por la Escuela Politécnica Nacional. Soy
