--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
       routerLink="/"
       fragment="top"
       [ngClass]="{
-        'bg-brand-primary text-brand-secundary rounded-md px-5':
+        'bg-brand-primary text-brand-secundary rounded-md px-1 sm:px-5 truncate':
           isActiveFragment('top')
       }"
       >Inicio</a
@@ -13,7 +13,7 @@
       routerLink="/"
       fragment="about-me"
       [ngClass]="{
-        'bg-brand-primary text-brand-secundary rounded-md px-5':
+        'bg-brand-primary text-brand-secundary rounded-md px-1 sm:px-5 truncate':
           isActiveFragment('about-me')
       }"
       >Sobre mi</a
@@ -22,16 +22,16 @@
       routerLink="/"
       fragment="experience"
       [ngClass]="{
-        'bg-brand-primary text-brand-secundary rounded-md px-5':
+        'bg-brand-primary text-brand-secundary rounded-md px-1 sm:px-5 truncate':
           isActiveFragment('experience')
       }"
-      >Expereiencia</a
+      >Experiencia</a
     >
     <a
       routerLink="/"
       fragment="projects"
       [ngClass]="{
-        'bg-brand-primary text-brand-secundary rounded-md px-5':
+        'bg-brand-primary text-brand-secundary rounded-md px-1 sm:px-5 truncate':
           isActiveFragment('projects')
       }"
       >Projectos</a
@@ -40,7 +40,7 @@
       routerLink="/"
       fragment="contact"
       [ngClass]="{
-        'bg-brand-primary text-brand-secundary rounded-md px-5':
+        'bg-brand-primary text-brand-secundary rounded-md px-1 sm:px-5 truncate':
           isActiveFragment('contact')
       }"
       >Contacto</a
